<resources>
    <string name="app_name">Mobile</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <!-- Label settings -->
    <string name="pref_title_label">Label</string>
    <string-array name="pref_label_titles">
        <item>general</item>
        <item>movable</item>
        <item>pvc</item>
    </string-array>
    <string-array name="pref_label_values">
        <item>general</item>
        <item>movable</item>
        <item>pvc</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_title_area">面积</string>
    <string name="pref_title_type">类型</string>
    <string name="pref_title_scale">损耗</string>

    <!-- Book settings -->
    <string name="pref_book_area_title">尺寸</string>
    <string-array name="pref_book_area_titles">1开</string-array>
    <string-array name="pref_book_area_entries">1k</string-array>

    <string name="box">纸箱</string>
    <string name="pocket">拎袋</string>
    <string name="books">样本册</string>
    <string name="label">不干胶</string>
    <string name="size">规格</string>
    <string name="general">普通不干胶</string>
    <string name="removable">可移不干胶</string>
    <string name="pvc">PVC不干胶</string>
    <string name="one">个</string>
    <string name="price">张</string>
    <string name="m2">平方米</string>
    <string name="page">页</string>
    <string name="book">本</string>
    <string name="g">克</string>
    <string name="all">（必选）</string>
    <string name="k">开</string>
    <string name="start">起步价</string>
    <string name="extra">加工费</string>
    <string name="yuan">元</string>
    <string name="knife">钢刀</string>
    <string name="emboss">压纹</string>
    <string name="print">印刷</string>
    <string name="corrugate">瓦楞</string>
    <string name="laminate">覆膜</string>
    <string name="gold">烫金</string>
    <string name="uv">UV</string>
    <string name="big">大规格</string>
    <string name="small">小规格</string>
    <string name="grey">灰板</string>
    <string name="white">白卡</string>
    <string name="copper">铜版纸</string>
    <string name="fold">折页</string>
    <string name="staple">骑马钉</string>
    <string name="glue">胶装</string>
    <string name="f">折页</string>
    <string name="type">类型</string>
    <string name="area">面积</string>
    <string name="scale">损耗</string>
    <string name="calculate">计算</string>
    <string name="bind">装订</string>
    <string name="page_num">页数</string>
    <string name="book_num">本数</string>
    <string name="material">材质</string>
    <string name="weight">重量</string>
    <string name="bind_price">价格</string>
    <string name="dialog_result">计算完成</string>
    <string name="dialog_ok">确定</string>
    <string name="cancel">取消</string>
    <string name="length">长</string>
    <string name="width">宽</string>
    <string name="height">高</string>
    <string name="number">数量</string>

</resources>
